# icons

./: README.md  README.rst  pyproject.toml
icons/: icon_parser.py  log.py  main.py
tests/: test_icons.py
