[tool.poetry]
name = "icons"
version = "0.1.0"
description = ""
authors = ["Joseph Flinn <joseph.s.flinn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
beautifulsoup4 = "^4.9.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
